# launchkey-tools

./: CMakeLists.txt  LICENSE
src/: incontrol.c  incontrol.h  main.c  midi.c  midi.h
src/incontrol-init/: main.c
src/lib/: incontrol.c  incontrol.h  midi.c  midi.h
src/sequencer/: main.c
